Bug #22892 Multiple following NR can cause REDO to be cut to much causing problems at SR
Submitted: 2 Oct 2006 16:18 Modified: 2 Nov 2006 10:51
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1-> OS:
Assigned to: Jonas Oreland Target Version:

[2 Oct 2006 16:18] Jonas Oreland
Description:
  

How to repeat:
  

Suggested fix:
Make sure checkCalcKeepGci is also run on oldstoredreplicas
(it will handle old LCP's)
[4 Oct 2006 12:06] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13062

ChangeSet@1.2549, 2006-10-04 12:05:24+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#22892
      Make sure checkKeepGci is also run on oldStoredReplicas
        to prevent keepgci to move backwards when crash node restarts
[10 Oct 2006 10:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13378

ChangeSet@1.2058, 2006-10-10 10:44:16+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#22892
        Make sure checkKeepGci is also run on oldStoredReplicas
          to prevent keepgci to move backwards when crash node restarts
  
    recommit in mysql-5.1-wl2325-5.0
[1 Nov 2006 15:28] Jonas Oreland
pushed into 4.1.22
[1 Nov 2006 15:48] Jonas Oreland
pushed into 5.0.29
[1 Nov 2006 15:55] Jonas Oreland
pushed into 5.1.13
[2 Nov 2006 10:51] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix for 4.1.22/5.0.29/5.1.13.
[4 Nov 2006 4:30] Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*