ndb - bug#22892     Make sure checkKeepGci is also run on oldStoredReplicas       to prevent keepgci to move backwards when crash node restarts